--- a/index copy.html
+++ b/index copy.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"/>
         <title>Mobile Menu</title>
         <!-- <script type="module" src="../src/index.js"></script> -->
-        <link rel="stylesheet" href="./src/reset.css">
-        <link rel="stylesheet" href="./src/style.css">
+        <link rel="stylesheet" href="../src/reset.css">
+        <link rel="stylesheet" href="../src/style.css">
     </head>
     <body>
         <header class="mobileMenu"> 
@@ -15,6 +15,6 @@
             <div class="windowWidth"></div>
             <div class="windowHeight"></div>
         </div>
-        <script type="module" src="./src/index.js"></script>
+        <script type="module" src="../src/index.js"></script>
     </body>
 </html>
