--- a/index copy.html
+++ b/index copy.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mobile Menu</title>
         <!-- <script type="module" src="../src/index.js"></script> -->
         <link rel="stylesheet" href="../src/reset.css">
