--- a/index copy.html
+++ b/index copy.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mobile Menu</title>
         <!-- <script type="module" src="../src/index.js"></script> -->
-        <link rel="stylesheet" href="../src/reset.css">
-        <link rel="stylesheet" href="../src/style.css">
+        <!-- <link rel="stylesheet" href="../src/reset.css"> -->
+        <!-- <link rel="stylesheet" href="../src/style.css"> -->
     </head>
     <body>
         <header class="mobileMenu"> 
